Initial work for handling submit, changing expenses, and showing recent expenses. Need to fix inconsistent alignment

--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,8 @@ form {
   margin-top: 25%; /* TODO: temporary value */
 }
 
+ol { list-style-type: none; }
+
 .input {
   text-align: center;
   display: block;
@@ -32,6 +34,11 @@ form {
   display: block;
   text-align: center;
   color: #777;
+}
+
+.card {
+  border: 1px solid #ccc;
+  padding: 1rem;
 }
 
 /* Margins */
